--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ body{
   left: -230px;
   width: 47%;
   height: 47%;
-  background: url('/img/Tečky.svg') no-repeat; 
+  background: url('/img/Tecky.svg') no-repeat; 
   background-size: contain;
   z-index: -1;
   opacity: 1;
@@ -180,6 +180,8 @@ body{
   width: 30px;
   cursor: pointer;
   display: none;
+  margin-left: 40vw;
+  z-index: 101;
 }
 
 .hamburger-icon span {
@@ -187,6 +189,8 @@ body{
   height: 3px;
   background-color: #160Eaa;
   transition: all 0.3 ease-in-out;
+  transform-origin: center;
+  z-index: 101;
 }
 
 .menu-links {
@@ -209,6 +213,7 @@ body{
   color: #160Eaa;
   text-decoration: none;
   transition: all 0.3 ease-in-out;
+  z-index: 101;
 }
 
 .menu-links li {
@@ -219,19 +224,29 @@ body{
   max-height: 300px;
 }
 
+.hamburger-icon span{
+  width: 50px;
+}
+
+
+
 .hamburger-icon.open span:first-child{
-  transform: rotate(45deg) translate(10px, 5px);
+  transform: rotate(45deg) translate(8px, 5px);
+  
 }
 .hamburger-icon.open span:nth-child(2) {
-  transform: rotate(-45deg) translate(10px, -5px);
+  transform: rotate(-45deg) translate(8px, -5px);
+  
 }
 
 .hamburger-icon span:first-child {
   transform: none;
+  
 }
 
 .hamburger-icon span:last-child {
   transform: none;
+ 
 }
 
 
@@ -242,7 +257,13 @@ body{
 
 /* openOrNot */
 
-.openOrNot, .container, .openingHoursRow, .openingHoursContainer, .detailBox, .detailBox h1, .openingHours{
+.openOrNot,
+ .container,
+  .openingHoursRow,
+   .openingHoursContainer,
+    .detailBox, 
+     .detailBox h1,
+      .openingHours{
   z-index: 100;
 }
 
@@ -482,6 +503,11 @@ align-items: center;
   flex-direction: row;
 }
 
+.staffJanaMatejkova img{
+  height: 40%;
+  width: auto;
+}
+
 .staffContainer{
   margin: 0 0 0 8.4%;
 }
@@ -509,6 +535,7 @@ align-items: center;
 
 .staffIrenaPodlahova img{
   margin: 10px 0 0 205px;
+  height: 10%;
 }
 
 .staffIrenaPodlahova div{
@@ -661,6 +688,7 @@ width: auto;
   text-align: center;
   border-radius: 22px;
   overflow: hidden;
+  border-collapse: collapse;
 }
 
 .odd td,th{
@@ -781,47 +809,73 @@ padding-bottom: 20px;
 
 /*contact info section*/
 
+.contactInfo::before {
+  content: "";
+  position: absolute;
+  top: 70px;
+  left: 100%;
+  width: 47%;
+  height: 47%;
+  background: url('/img/Drak.svg') no-repeat; 
+  background-size: contain;
+  z-index: -1;
+  opacity: 1;
+
+}
+
+
+
 .contactInfo{
-  padding: 82px 0 0 10.4%;
+  margin: 0 0 0 9.4vw;
+  padding: 82px 0;
 }
 
 .contactInfo > h2{
   font-size: 65px;
   font-weight: bold;
+  margin: 0 0 42px 15px;
 }
 
 
 
-.contactContainerTel > ul{
+.contactContainerTel  ul{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  list-style-type: none;
-  font-size: 22px;
-  margin-top: 16.84px;
-
-}
-
-.contactContainerTel > li{
-  margin-bottom: 25px;
   
+  font-size: 22px;
+  margin: 0 0 100px 15px;
+
 }
 
-.contactContainerTel > a{
+.contactContainerTel  li{
+  margin-bottom: 25px;
+  max-width: 700px;
+}
+
+.contactContainerTel  a{
   color: inherit;
-  text-decoration: inherit;
+  
+  
 }
 
 .contactContainerTelinside{
   display: flex;
   align-items: center;
+  position: relative;
+  margin-bottom: 17px;
 }
 
-.contactContainerTelInside > img{
-max-width: 136px;
+.contactContainerTelInside  img{
+  height: 115px;
+  width: auto;
+  right: 20px;
+  position: absolute;
+  
+  
 }
 
-.contactContainerTelinside > a{
+.contactContainerTelinside  a{
   font-size: 45px;
   margin-left: 30px;
   color: inherit;
@@ -829,14 +883,20 @@ max-width: 136px;
 
 }
 
+.contacUnList{
+  list-style-type: none;
+}
+
 .contactContainerEmail{
   display: flex;
   align-items: center;
+  margin-bottom: 25px;
 }
 
 
 .contactContainerEmail > img{
-  max-width: 121.35px ;
+  height:  100px ;
+  width: auto;
 }
 
 .contactContainerEmail > a{
@@ -849,19 +909,18 @@ max-width: 136px;
 
 
 
-.emailList h5, .emailList p{
+.emailList p{
+  margin: 0 0 25px 0;
   font-size: 22px;
 }
 
 .emailList ul{
   list-style-position: inside;
-  font-size: 22px;
-  list-style-type: none;
 }
 
 
 .contactContainerAddress > img{
-  max-width: 131.12px;
+  max-width: 131px;
 }
 
 .contactContainerAddress{
@@ -884,28 +943,54 @@ max-width: 136px;
   justify-content: space-between;
 }
 
-.childCar {
-  z-index: 3;
-  margin-right: 138.77px;
+
+.contactContainerAddressInside img{
+  width: 100px;
+  height: auto;
+  margin-right: 29px;
+  margin-bottom: 27px;
+}
+
+.contactContainerAddressInside h5{
+  margin-right: 19px;
 }
 
 address > a{
   color: inherit;
-  text-decoration: inherit;
+  font-style: normal;
+  margin-right: 215px;
+}
+
+.auticko {
+  height: 120%;
+  width: auto;
 }
 
 
 
 .ordinancePhoto{
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
   margin-bottom: 40px;
+  position: relative;
+
 }
 
-.ordinancePhoto :nth-of-type(1){
-  margin-left: 4.8%;
+.ordinancePlace1{
+  position: absolute;
   margin-right: 0.7%;
+  height: 68%;
+  width: auto;
 }
+
+.ordinancePlace2{
+  position: absolute;
+  margin-right: 0.7%;
+  height: 394px;
+  width: auto;
+}
+
+
 
 .buildingDescription > span{
   margin-left: 10,4%;
@@ -973,13 +1058,17 @@ footer{
   margin-left: 10.4%;
 }
 
-.priceListContainer table{
+.priceList{
   height: 330px;
   width: 935px;
   margin-top: 40px;
-  text-align: center;
+  border-collapse: collapse;
   border-radius: 22px;
   overflow: hidden;
+}
+
+.priceList td{
+  margin-left: 40px;
 }
 
 /* Mobile phones */
