--- a/css/style.css
+++ b/css/style.css
@@ -1172,7 +1172,100 @@ footer{
   margin-top: 30px;
 }
 
+/* vybaveniPage */
 
+.equipment{
+  margin-left: 10.4vw;
+  margin-top: 80px;
+}
+
+.equipment h1{
+  max-width: 700px;
+  line-height: 1;
+}
+
+.equipment h5{
+  max-width: 700px;
+  font-weight: normal;
+  margin-bottom: 50px;
+}
+
+.vybaveniPage table{
+  max-width: 935px;
+  border-radius: 22px;
+  border-collapse: collapse;
+  overflow: hidden;
+}
+
+.vybaveniPage tr{
+  margin-left: 40px;
+}
+
+/* aktualityPage */
+.aktualityPage{
+  background-color: #C6E5CD;
+}
+
+.aktualityPage .topBanner{
+  display: none;
+}
+
+
+.aktualityPage h1{
+  margin-top: 80px;
+}
+
+.actualContainer{
+  margin-left: 10.4vw;
+}
+
+.actualContainer div{
+  background-color: #FFFCF0;
+  border-radius: 22px;
+}
+
+/* sluzbyPage */
+
+.ourServices{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 0  0 75px 10,4vw;
+  padding: 80px;
+
+}
+
+.ourServices h2{
+  margin: 0 31vw 0 10.4vw;
+  line-height: 1;
+}
+
+
+.ourServices :nth-of-type(2){
+  background-color: #FFEDA3;
+  font-size: 30px;
+  width: 322px;
+  height: 69px;
+  border-radius: 35px;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+
+.ourServices :nth-of-type(2):hover{
+  background-color: #FFFCF0;
+  text-decoration: underline;
+}
+
+.ourServices a{
+  margin: 0 auto;
+  text-decoration: none;
+  color: inherit;
+}
+
+.sluzbyPage ul{
+  list-style: disc !important;
+}
 
 /* Mobile phones */
 
