--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@ html{
 *{
     margin: 0;
     padding: 0;
-    /* box-sizing: border-box;
-    outline: 1px solid red; */
+    box-sizing: border-box;
+    outline: 1px solid red;
   }
 
 body{
@@ -37,18 +37,19 @@ body{
     height: 66px;
     display: flex;
     flex-direction: row;
-    
+    justify-content: space-between;
     align-items: center;
    
   }
 
   .notification > span{
-    
+    flex-basis: auto;
     font-weight: normal;
+
   }
 
   .attention{
-    margin-left: 4.8vw;
+    margin-left: max(4.8vw, 10px);
     font-size: 16px;
   }
 
@@ -57,7 +58,8 @@ body{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-left: 42%;
+    flex-basis: auto;
+    padding-right: 3%;
   }
 
   .bannerRight > span{
@@ -83,11 +85,12 @@ body{
   left: -230px;
   width: 57vw;
   height: 57vw;
-  background: url('/img/Tecky.svg') no-repeat; 
+  background: url('../img/Tecky.svg') no-repeat; 
   background-size: contain;
   z-index: -1;
   opacity: 1;
-
+ 
+  
 }
 
 .mainPage header::after {
@@ -97,7 +100,7 @@ body{
   left: 82vw;
   width: 135%;
   height: 135%;
-  background: url('/img/Raketa.svg') no-repeat; 
+  background: url('../img/Raketa.svg') no-repeat; 
   background-size: contain;
   z-index: 2;
   opacity: 1;
@@ -105,32 +108,58 @@ body{
 
 
 .containerFluid{
-  margin: 33px 0 0 4.8vw;
+  margin: 33px 0 0 0;
 }
+
 .navbar{
   display: flex;
-  
+  justify-content: center;
   flex-direction: row;
   z-index: 100;
   position: relative;
+  /* justify-content: space-between; */
+}
+
+.spaceBetween{
+  width: 31%;
+  flex-shrink: 1;
+}
+
+.navbarHidden{
+  display: flex;
+  justify-content:center;
+  flex-direction: row;
+  z-index: 100;
+  position: relative;
+  margin-right: 4.8vw;
+  align-content: center;
+}
+
+.logo {
+  margin-left: max(4.8vw, 10px);
+  min-width: 304px;
 }
 
 .logo>h3{
   
   height: 41px ;
   opacity: 1;
+  flex-basis: auto;
 }
 
 .logo h4{
   height: 23px;
+  flex-basis: auto;
 }
+
+
 
   /* Hamburger navbar */
 #desktop-nav{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  margin-left: 28%;
+  min-width: 554px;
+  
 }
 
 
@@ -156,10 +185,11 @@ body{
 }
 
 .menu-links li a{
-  margin-right: 10px;
+  margin-left: 11.7vw ;
   gap: 2rem;
   text-decoration: none;
   color: #160Eaa;
+
 }
 
 .menu-links > li >a:hover{
@@ -167,9 +197,10 @@ body{
 }
 
 .hamburger-menu {
-  position: relative;
  
-
+  right: 200px;
+  margin-right: 300px;
+  margin-left: 300px
 }
 
 .hamburger-icon {
@@ -180,8 +211,9 @@ body{
   width: 30px;
   cursor: pointer;
   display: none;
-  margin-left: 40vw;
+  padding: 0 200px 0 200px;
   z-index: 101;
+  margin-top: 10px;
 }
 
 .hamburger-icon span {
@@ -225,7 +257,7 @@ body{
 }
 
 .hamburger-icon span{
-  width: 50px;
+  width: 70px;
 }
 
 
@@ -386,8 +418,9 @@ align-items: center;
 .welcomePhoto{
   left: 720px;
   position: absolute;
-  width: 50%;
+  width: 661px;
   height: auto;
+  
   
   
 }
@@ -829,7 +862,7 @@ padding-bottom: 20px;
   left: 100%;
   width: 47%;
   height: 47%;
-  background: url('/img/Drak.svg') no-repeat; 
+  background: url('../img/Drak.svg') no-repeat; 
   background-size: contain;
   z-index: -1;
   opacity: 1;
@@ -1157,19 +1190,32 @@ footer{
 
   font-size: 30px;
   font-weight: normal;
+  z-index: 100;
 }
 
 .listOfInsuranceCompanies{
   background-color: #D6EDF0;
   padding: 82px 0;
+  position: relative;
+  z-index: 100;
 }
 
 .listOfInsuranceCompanies div{
-  margin-left: 150px;
+  margin-left: 10.4vw;
+  z-index: 100;
 }
 
 .listOfInsuranceCompanies table{
   margin-top: 30px;
+  z-index: 100;
+}
+
+.registracePage tr :nth-of-type(1){
+  width: 60px;
+}
+
+.registracePage tr :nth-of-type(2){
+  max-width: 500px;
 }
 
 /* vybaveniPage */
@@ -1224,19 +1270,36 @@ footer{
   border-radius: 22px;
 }
 
+.vybaveniPage tr :nth-of-type(1){
+  padding-left: 40px;
+  max-width: 190px;
+  vertical-align: top;
+  padding-top: 6px;
+  padding-bottom: 5px;
+}
+
+.vybaveniPage tr :nth-of-type(2){
+  padding-left: 40px;
+  padding-top: 6px;
+  max-width: 720px;
+  vertical-align: top;
+  padding-bottom: 5px;
+}
+
 /* sluzbyPage */
 
 .ourServices{
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin: 0  0 75px 10,4vw;
-  padding: 80px;
-
+  margin: 0  11.7vw 75px 0;
+  padding-top: 80px;
+  flex-basis: auto;
+  justify-content: space-between;
 }
 
 .ourServices h2{
-  margin: 0 31vw 0 10.4vw;
+  margin: 0 0 0 10.4vw;
   line-height: 1;
 }
 
@@ -1250,6 +1313,9 @@ footer{
   display: flex;
   align-items: center;
   flex-direction: row;
+  text-decoration: none;
+  text-align: center;
+  justify-content: center;
 }
 
 .ourServices :nth-of-type(2):hover{
@@ -1257,39 +1323,50 @@ footer{
   text-decoration: underline;
 }
 
-.ourServices a{
+.offeredServicesContainer a{
   margin: 0 auto;
-  text-decoration: none;
   color: inherit;
 }
 
-.sluzbyPage ul{
-  list-style: disc !important;
+.offeredServicesContainer{
+  margin-left: 11.6vw;
 }
 
-/* Mobile phones */
-
-@media only screen and (max-width: 480px) {
-    body {
-        font-size: 0.77rem;
-    }
-    h1{
-        font-size: 2.5rem;
-    }
-    h2{
-        font-size: 1.73rem;
-    }
-    h3{
-        font-size: 1.14rem;
-    }
+.offeredServicesContainer ul{
+  list-style-position: outside;
+  list-style: none;
 }
 
-@media screen and (max-width: 1200px) {
-  #desktop-nav {
-      display: none;
-  }
-  .hamburger-icon {
-      display: flex;
-  }
+.offeredServicesContainer li{
+  margin-bottom: 30px;
+  max-width: 700px;
+  
+}
+
+.offeredServicesContainer li::before{
+  content: '\2022'; /* Unicode character for bullet */
+  position: relative;
+  font-size: 25px;
+  right: 0.88em;
+  font-weight: 600;
+}
+
+
+
+.pedoBear{
+  height: 165px;
+  width: 131px;
+  position: absolute;
+  right: 50px;
+  bottom: 25px;
+  z-index: -1;
+}
+
+.sluzbyPage tr :nth-of-type(1){
+  width: 60px;
+}
+
+.sluzbyPage tr :nth-of-type(2){
+  max-width: 500px;
 }
 
