--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,71 @@
 /* Mobile phones */
 
+
+/* 1600px + */
+
+@media screen and (min-width: 1600px){
+
+
+
+}
+
+
+@media only screen and (max-width: 1250px) {
+  
+    /* header nav hamburger */
+  
+    #desktop-nav {
+      display: none;
+  }
+  .hamburger-icon {
+      display: flex;
+  }
+
+  /*Doctors office  section*/
+    .officeHeading{
+        flex-direction: column;
+    }
+
+    .officeHeading div{
+        margin-top: 30px;
+        max-width: 150px;
+        min-width: none;
+        
+    }
+
+    .insuranceLogoContainer{
+        display: none;
+    }
+
+    /* Staff section */
+
+    .staffJanaMatejkova{
+        justify-content: center;
+
+    }
+
+    .staffIrenaPodlahova{
+        justify-content: center;
+    }
+
+    .staffJanaMatejkova div{
+        margin: 38vw 0 0 5vw;
+        
+    }
+
+    .staffIrenaPodlahova img{
+        top: 1vw;
+        margin: 20px 0 0 0;
+    }
+
+
+    .staffIrenaPodlahova div{
+        margin: 25vw 0 0 5vw;
+    }
+
+    
+}
+
 @media only screen and (max-width: 780px) {
     
     
@@ -66,6 +132,7 @@
         font-size: 17px;
     } */
 
+
     .container{
         width: 89vw;
         margin-left: 20px;
@@ -129,15 +196,65 @@
         left: 13vw;
     }
 
+    /*Doctors office  section*/
+
     .officeHeading{
+        margin-left: 20px;
+        flex-direction: column;
+        max-width: 90vw;
+    }
+
+    .doctorsOffice h2 {
+        font-size: 38px;
+        margin: 0 0 0 0;
+    }
+
+    .officeHeading a  {
+        font-size: 25px;
+        max-width: 90vw;
+        width: 100%;
+    }
+
+    .doctorsOffice p{
+        margin: 30px 0 0 20px;
+        max-width: 90vw;
+    }
+
+    .officeHeading div{
+        width: 80px;
+        border-radius: 30px;
+        height: 59px;
+        max-width: 85vw;
+    }
+
+    .officeNav{
+        margin: 0 0 0 20px;
+    }
+
+    .officeNav{
+        margin-top: 20px;
+        line-height: 2;
+        text-align: center;
+        max-width: 90vw;
+
+    }
+
+    /* Staff section */
+
+    .staffContainer{
         margin-left: 20px;
     }
 
-    .officeHeading h2 {
-        font-size: 38px;
+    
+
+    .staffJanaMatejkova img{
+        height: auto;
+        width: 31.5vw;
     }
 
-    /*Doctors office  section*/
+    .janaMatejkovaParagraph{
+        margin: 400px 0 0 0;
+    }
 
 }
 
@@ -146,26 +263,19 @@
         margin: 0 0 0 20px;
         padding: 0 0 0 0;
     }
-}
 
-@media only screen and (max-width: 1250px) {
-  #desktop-nav {
-      display: none;
-  }
-  .hamburger-icon {
-      display: flex;
-  }
-}
+    .staffJanaMatejkova div{
+        margin-left: 0;
+    }
 
-@media only screen and (max-width: 1250px){
-
+    .staffIrenaPodlahova div{
+        margin-left: 0;
+    }
 }
 
 
-/* 1600px + */
-
-@media screen and (min-width: 1600px){
 
 
 
-}
+
+
