--- a/css/style.css
+++ b/css/style.css
@@ -431,13 +431,14 @@ align-items: center;
 /*Doctors office  section*/
 .doctorsOffice{
   background-color: #FFEDA3;
-  padding: 130px 0 100px 10.4%;
+  padding: 130px 0 100px 0 ;
+  
   
 }
 
 .doctorsOffice h2{
   font-size: 65px;
-  margin-right: 377px;
+  margin: 0 26.1vw 0 0;
 }
 
 .doctorsOffice p a{
@@ -450,7 +451,9 @@ align-items: center;
   flex-direction: row;
   z-index: 5;
   margin-bottom: 75px;
-
+  flex-basis: auto;
+  overflow: hidden;
+  margin: 0 0 0 10.4vw;
 }
 
 .officeHeading{
@@ -461,7 +464,7 @@ align-items: center;
 .officeHeading div{
   background-color: #FFFCF0;
   font-size: 30px;
-  width: 322px;
+  min-width: 322px;
   height: 69px;
   border-radius: 35px;
   display: flex;
@@ -474,7 +477,7 @@ align-items: center;
 }
 
 .officeHeading a{
-  margin: 0 auto;
+  margin: 0 34px 0 34px;
   text-decoration: none;
   color: inherit;
 }
@@ -484,7 +487,7 @@ align-items: center;
   display: flex;
   flex-direction: column;
   width: 700px;
-  margin-right: 11.7%;
+  margin: 70px 0 0 10.4vw;
 
 }
 
@@ -496,11 +499,11 @@ align-items: center;
 .officeNav{
   font-size: 22px;
   font-weight: normal;
-  margin-top: 60px;
+  margin: 60px 0 0 10.4vw;
 }
 
 .officeNav a{
-  margin-right: 50px;
+  margin-right: 3.5vw;
   color: inherit;
   text-decoration: inherit;
 }
@@ -543,20 +546,22 @@ align-items: center;
 .staffJanaMatejkova{
   display: flex;
   flex-direction: row;
+  position: relative;
+
 }
 
 .staffJanaMatejkova img{
   position: absolute;
-  height: 70%;
-  width: auto;
+  height: auto;
+  width: 31.5vw;
 }
 
 .staffContainer{
-  margin: 0 0 0 8.4%;
+  margin: 0 0 0 8.4vw;
 }
 
 .staffJanaMatejkova div{
-  margin: 103px 0 120px 630px;
+  margin: 103px 0 120px 38.2vw;
 
 }
 
@@ -569,6 +574,7 @@ align-items: center;
   margin-top: 18px;
   font-size: 22px;
   max-width: 700px;
+  margin-right: 40px;
 }
 
 
@@ -581,9 +587,9 @@ align-items: center;
 .staffIrenaPodlahova img{
   margin: 10px 0 0 205px;
   height: 10%;
-  position: relative;
-  height: 70%;
-  width: auto;
+  position: absolute;
+  height: auto;
+  width: 21vw;
 }
 
 .staffIrenaPodlahova div{
