--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ html{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
   }
 
 body{
@@ -401,7 +401,7 @@ align-items: center;
 
 }
 
-.post img{
+.postIcon{
   height: 100px;
   width: auto;
   margin: 57px 30px 0 45px;
@@ -541,6 +541,7 @@ align-items: center;
 .staff{
   background: #FFEDA3;
   padding-top: 40px;
+  padding-bottom: 37px;
 }
 
 .staffJanaMatejkova{
@@ -644,40 +645,44 @@ align-items: center;
 
 .rewievFromPatients{
   background-color: #FFEDA3;
-  padding: 100px 0 100px 10.4%;
+  padding: 100px 0 100px 0;
 }
 
 .rewievFromPatients h2{
   font-size: 45px;
   margin-bottom: 40px;
+  margin-left: 10.4vw;
 }
 
 .patientRewiev{
   background: #FFFCF0;
   display: flex;
   flex-direction: row;
-  padding: 60px 0 60px 50px;
-  width: 1050px;
+  padding: 60px 4.8vw 60px 3.4vw;
+  margin-left: 10.4vw;
+  width: 73vw;
   border-radius: 22px ;
+  
 }
 
 
 .patientRewiev div{
   display: flex;
   flex-direction: column;
+  
 }
 
 .patientRewiev img{
 margin-right: 15px;
 max-width: 100%;
-height: 205px;
-width: auto;
+height: 100%;
+width: 16.9vw;
 
 }
 
 .patientRewiev p{
   font-size: 28px;
-  width: 700px;
+  
   margin-bottom: 22px;
 }
 
@@ -687,7 +692,7 @@ width: auto;
 }
 
 .otherRewievs{
-  margin-left: 10.2%;
+  margin-left: 19vw;
 }
 
 .otherRewievs h3{
@@ -700,38 +705,43 @@ width: auto;
   font-size: 22px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  width: 362px;
+  
+  
+  line-height: 1.5;
 }
 
 .otherRewievs a{
   font-size: 22px;
   color: inherit;
   text-decoration: inherit;
+  margin-right: 50px;
 
 }
 
 /* Office Hours section */
 
 .officeHours{
-  padding: 82px 0 100px 10.4%;
+  padding: 82px 0 100px 0;
    
 
 }
 
 .officeHours h2{
   font-size: 65px;
+  margin-left: 10.4vw;
 }
 
 .officeHours h5{
   margin-top: 75px;
   font-size: 30px;
+  margin-left: 10.4vw;
 }
 
 .officeHours p{
   margin-top: 30px;
   font-size: 22px;
   width: 700px;
+  margin-left: 10.4vw;
 }
 
 
@@ -744,6 +754,7 @@ width: auto;
   border-radius: 22px;
   overflow: hidden;
   border-collapse: collapse;
+  margin-left: 10.4vw;
 }
 
 .odd td,th{
@@ -791,17 +802,18 @@ tr {
 
 .adviceAndTips {
   background-color: #D6EDF0;
-  padding: 82px 0 100px 10.4%;
+  padding: 82px 0 100px 0;
 }
 
 .adviceAndTipsInside > h2{
   font-size: 65px;
   margin-bottom: 5px ;
+  margin-left: 10.4vw;
 }
 
 .adviceAndTipsInside > h3{
   font-size: 45px ;
-  margin: 60px 0 30px 0;
+  margin: 60px 0 30px 10.4vw;
 
 }
 
@@ -810,6 +822,8 @@ tr {
   
  
 }
+
+
 
 .adviceContainer{
   display: flex;
@@ -832,7 +846,8 @@ tr {
   width: 800px;
   margin-bottom: 10px;
   border-radius: 22px;
-  display: flex;
+  margin-left: 10.4vw;
+
 }
 
 
@@ -881,14 +896,15 @@ padding-bottom: 20px;
 
 
 .contactInfo{
-  margin: 0 0 0 9.4vw;
+  
   padding: 82px 0;
 }
 
 .contactInfo > h2{
   font-size: 65px;
   font-weight: bold;
-  margin: 0 0 42px 15px;
+  margin: 0 0 42px 10.4vw;
+
 }
 
 
@@ -899,7 +915,7 @@ padding-bottom: 20px;
   justify-content: space-between;
   
   font-size: 22px;
-  margin: 0 0 100px 15px;
+  margin: 0 0 100px 0;
 
 }
 
@@ -919,12 +935,13 @@ padding-bottom: 20px;
   align-items: center;
   position: relative;
   margin-bottom: 17px;
+  flex-direction: row;
 }
 
 .contactContainerTelInside  img{
-  height: 115px;
-  width: auto;
-  right: 20px;
+  height: auto;
+  width: 9.3vw;
+  margin-left: 9.4vw;
   position: absolute;
   
   
@@ -935,6 +952,10 @@ padding-bottom: 20px;
   margin-left: 30px;
   color: inherit;
   text-decoration: inherit;
+  
+}
+
+.contactContainerTelinside img{
 
 }
 
