--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 html{
   scroll-behavior: smooth;
+  
 }
 
 *{
@@ -415,7 +416,8 @@ align-items: center;
 }
 
 .post a:hover{
-  color: #C6E5CD;
+  /* color: #C6E5CD; */
+  text-decoration: none;
 }
 
 .welcomePhoto{
@@ -428,12 +430,77 @@ align-items: center;
   
 }
 
+#backToTopBtn {
+  display: none; /* Tlačítko bude na začátku skryté */
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 500;
+  border-radius: 50%;
+  height: 64px;
+  width: 64px;
+  border: none;
+  background-color: #C6E5CD ;
+  color: #160EAA;
+  font-family: 'Larsseit-bold';
+  overflow: hidden;
+  font-size: 20px;
+  line-height: 40px; 
+  text-align: center;
+}
+
+
+
+#backToTopBtn::after {
+  content: '';
+  display: block;
+  width: 15px;
+  height: 15px;
+  border-style: solid;
+  border-width: 0 4px 4px 0;
+  border-color: #160EAA;
+  transform: rotate(-135deg); /* Otočení šipky */
+  position: absolute;
+  top: 50%; /* Zarovnání šipky do středu tlačítka */
+  left: 50%; /* Zarovnání šipky do středu tlačítka */
+  transform: translate(-50%, -50%) rotate(-135deg); /* Otočení šipky a zarovnání do středu */
+  border-radius: 3px;
+}
+
+
+
+#backToTopBtn::before {
+  content: '';
+  display: block;
+  width: 3px;
+  height: 30px;
+  background-color: #160EAA;
+  position: absolute;
+  top: 55%; /* Zarovnání šipky do středu tlačítka */
+  left: 50%; /* Zarovnání šipky do středu tlačítka */
+  transform: translate(-50%, -50%) rotate(180deg); /* Otočení a zarovnání čáry */
+  border-radius: 2px;
+}
+
+#backToTopBtn:hover{
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+
+
+
 /*Doctors office  section*/
 .doctorsOffice{
   background-color: #FFEDA3;
   padding: 130px 0 100px 0 ;
   
   
+}
+
+.backToTopImage{
+  height: 80%;
+  width: auto;
 }
 
 .doctorsOffice h2{
@@ -469,11 +536,14 @@ align-items: center;
   border-radius: 35px;
   display: flex;
   align-items: center;
-  z-index: 4;
+  z-index: 999;
+  margin-bottom: 10px;
 }
 
 .officeHeading div:hover{
-  background-color: #FFEDA3;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  z-index: 500;
 }
 
 .officeHeading a{
@@ -555,6 +625,8 @@ align-items: center;
   position: absolute;
   height: auto;
   width: 31.5vw;
+  max-height: 415px;
+  max-width: 440px;
 }
 
 .staffContainer{
@@ -562,8 +634,8 @@ align-items: center;
 }
 
 .staffJanaMatejkova div{
-  margin: 103px 0 120px 38.2vw;
-
+  margin: 40px 0 120px 38.2vw;
+  max-width: 58vw;
 }
 
 .staffJanaMatejkova h3{
@@ -587,14 +659,16 @@ align-items: center;
 
 .staffIrenaPodlahova img{
   margin: 10px 0 0 205px;
-  height: 10%;
+  max-height: 288px;
   position: absolute;
   height: auto;
   width: 21vw;
+  max-width: 306px;
 }
 
 .staffIrenaPodlahova div{
-  margin: 60px 0 0 25px;
+  margin: 60px 0 0 38.2vw;
+  max-width: 50vw;
 }
 
 .staffIrenaPodlahova h3{
@@ -608,6 +682,7 @@ align-items: center;
   font-size: 22px;
   font-weight: normal;
   max-width: 700px;
+  margin-bottom: 150px;
 }
 
 /* Slider section */
@@ -803,6 +878,7 @@ tr {
 .adviceAndTips {
   background-color: #D6EDF0;
   padding: 82px 0 100px 0;
+  width: 100%;
 }
 
 .adviceAndTipsInside > h2{
@@ -850,11 +926,13 @@ tr {
 
 }
 
-
-.adviceToggle:hover {
+.adviceRollbox:hover{
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   cursor: pointer;
-  color: #006EB7;
 }
+
+
+
 
 .adviceToggleContent{
 margin: 0 60px 0 40px;
@@ -879,19 +957,7 @@ padding-bottom: 20px;
 
 /*contact info section*/
 
-.contactInfo::before {
-  content: "";
-  position: absolute;
-  top: 70px;
-  left: 100%;
-  width: 47%;
-  height: 47%;
-  background: url('../img/Drak.svg') no-repeat; 
-  background-size: contain;
-  z-index: -1;
-  opacity: 1;
 
-}
 
 
 
@@ -909,13 +975,30 @@ padding-bottom: 20px;
 
 
 
+
+
+.mainPage .contactContainerTelInside::after {
+  content: "";
+  position: absolute;
+  top: 135px;
+  right: -250px;
+  width: 60vw;
+  height: 40vw;
+  background: url('../img/Drak.svg') no-repeat; 
+  background-size: contain;
+  z-index: -1;
+  opacity: 1;
+}
+
+
+
 .contactContainerTel  ul{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   
   font-size: 22px;
-  margin: 0 0 100px 0;
+  margin: 0 0 100px 10.4vw;
 
 }
 
@@ -930,7 +1013,7 @@ padding-bottom: 20px;
   
 }
 
-.contactContainerTelinside{
+.contactContainerTelInside{
   display: flex;
   align-items: center;
   position: relative;
@@ -938,16 +1021,18 @@ padding-bottom: 20px;
   flex-direction: row;
 }
 
-.contactContainerTelInside  img{
+
+
+.contactContainerTelInside > img  {
   height: auto;
-  width: 9.3vw;
+  width: 126px;
   margin-left: 9.4vw;
-  position: absolute;
+  
   
   
 }
 
-.contactContainerTelinside  a{
+.contactContainerTelInside  a{
   font-size: 45px;
   margin-left: 30px;
   color: inherit;
@@ -955,9 +1040,7 @@ padding-bottom: 20px;
   
 }
 
-.contactContainerTelinside img{
 
-}
 
 .contacUnList{
   list-style-type: none;
@@ -971,8 +1054,9 @@ padding-bottom: 20px;
 
 
 .contactContainerEmail > img{
-  height:  100px ;
-  width: auto;
+  height:  auto ;
+  width: 121px;
+  margin-left: 9.4vw;
 }
 
 .contactContainerEmail > a{
@@ -986,7 +1070,7 @@ padding-bottom: 20px;
 
 
 .emailList p{
-  margin: 0 0 25px 0;
+  margin: 0 0 25px 10.4vw;
   font-size: 22px;
 }
 
@@ -995,9 +1079,6 @@ padding-bottom: 20px;
 }
 
 
-.contactContainerAddress > img{
-  max-width: 131px;
-}
 
 .contactContainerAddress{
   display: flex;
@@ -1015,31 +1096,44 @@ padding-bottom: 20px;
 
 .contactContainerAddressInside {
   display: flex;
-  align-items: center;
+  
   justify-content: space-between;
+  
+}
+
+.contactContainerAddressInside div{
+  display: inline-block;
+  /* align-items: center; */
+  vertical-align: baseline;
 }
 
 
-.contactContainerAddressInside img{
-  width: 100px;
+.spendlik{
   height: auto;
+  width: 131;
   margin-right: 29px;
   margin-bottom: 27px;
+  margin-left: 9.4vw;
 }
 
 .contactContainerAddressInside h5{
   margin-right: 19px;
+  font-size: 45px ;
+  white-space: nowrap;
 }
 
-address > a{
+address {
   color: inherit;
   font-style: normal;
   margin-right: 215px;
+  margin-top: 21px;
+  white-space: nowrap;
+  font-size: 30px;
 }
 
 .auticko {
-  height: 120%;
-  width: auto;
+  height: auto;
+  width: 9vw;
   position: absolute;
 }
 
@@ -1050,27 +1144,31 @@ address > a{
   flex-direction: row;
   margin-bottom: 40px;
   position: relative;
-
+  
+  justify-content: flex-start;
+  align-items: stretch;
+  align-items: flex-start;
 }
 
-.ordinancePlace1{
-  position: absolute;
-  margin-right: 0.7%;
-  height: 68%;
-  width: auto;
+.ordinancePhoto :nth-of-type(1){
+  margin-left: 70px;
+}  
+
+
+.ordinancePlace1 img,
+.ordinancePlace2 img{
+  
+  margin-right: 10px;
+  
+  width: auto; 
+  max-height: 394px;
+  
 }
 
-.ordinancePlace2{
-  position: absolute;
-  margin-right: 0.7%;
-  height: 394px;
-  width: auto;
-}
 
 
-
-.buildingDescription > span{
-  margin-left: 10,4%;
+.buildingDescription > p{
+  margin-left: 10.4%;
 }
 
 /* footer section */
@@ -1091,6 +1189,10 @@ footer{
   margin-bottom: 45px;
   height: 100px;
 
+}
+
+.footer img{
+  margin-right: 27px;
 }
 
 .footerFirstImg {
@@ -1114,12 +1216,17 @@ footer{
   font-size: 14px;
   color: #989898;
   letter-spacing: 0px;
-  height: 52%;
+  min-height: 51px;
   text-align: left;
-  max-width: 40%;
-
-
+  width: 414px;
+  max-height: 70px;
+  /* white-space: pre-wrap; */
+  /* overflow: hidden; */
+  /* word-wrap: break-word; */
+  /* text-overflow: ellipsis; */
 }
+
+
 .marathonSign{
   font-size: 16px;
   color: #EABF7B;
