--- a/css/style.css
+++ b/css/style.css
@@ -70,11 +70,14 @@ body{
 
   .bannerRight > a{
     font-size: 16px;
-  
+    
     color: #160Eaa;
     
   }
 
+  .bannerRight > a:hover{
+    text-decoration: none;
+  }
 
 
 /* navbar */
@@ -105,6 +108,7 @@ body{
   background-size: contain;
   z-index: 2;
   opacity: 1;
+  overflow: hidden;
 }
 
 
@@ -116,7 +120,7 @@ body{
   display: flex;
   justify-content: center;
   flex-direction: row;
-  z-index: 100;
+  z-index: 999;
   position: relative;
   /* justify-content: space-between; */
 }
@@ -137,9 +141,15 @@ body{
   align-content: center;
 }
 
+
+
 .logo {
   margin-left: max(4.8vw, 10px);
   min-width: 304px;
+}
+
+.logo:hover{
+  cursor: pointer
 }
 
 .logo>h3{
@@ -177,12 +187,14 @@ body{
   gap: 2rem;
   text-decoration: none;
   color: #160Eaa;
-  
+  font-weight: bold;
+  z-index: 999;
+  font-size: 38px;
 }
 
 .nav-links > li >a:hover{
-  color: #C6E5CD;
-  
+  /* color: #C6E5CD; */
+  text-decoration: underline;
 
 }
 
@@ -191,18 +203,19 @@ body{
   gap: 2rem;
   text-decoration: none;
   color: #160Eaa;
-
+  font-weight: bold;
+  z-index: 999;
 }
 
 .menu-links > li >a:hover{
-  color: #EABF7B;
+  text-decoration: underline;
+  z-index: 999;
 }
 
-.hamburger-menu {
+#hamburger-menu {
  
-  right: 200px;
-  margin-right: 300px;
-  margin-left: 300px
+
+  z-index: 950;
 }
 
 .hamburger-icon {
@@ -214,7 +227,7 @@ body{
   cursor: pointer;
   display: none;
   padding: 0 200px 0 200px;
-  z-index: 101;
+  z-index: 999;
   margin-top: 10px;
 }
 
@@ -224,63 +237,70 @@ body{
   background-color: #160Eaa;
   transition: all 0.3 ease-in-out;
   transform-origin: center;
-  z-index: 101;
+  z-index: 999;
 }
 
 .menu-links {
   position: absolute;
-  top: 100%;
+  top: 10px;
   right: 0;
+  padding-top: 40px;
   background-color: #D6EDF0;
   width: fit-content;
   max-height: 0;
   overflow: hidden;
   transition: all 0.3 ease-in-out;
-  z-index: 101;
+  z-index: 950;
 }
 
 .menu-links a {
   display: block;
   padding: 10px;
-  text-align: center;
-  font-size: 1.5rem;
+  text-align: left;
+  font-size: 38px;
   color: #160Eaa;
   text-decoration: none;
   transition: all 0.3 ease-in-out;
-  z-index: 101;
+  z-index: 999;
+
 }
 
 .menu-links li {
   list-style: none;
+  z-index: 999;
 }
 
 .menu-links.open {
-  max-height: 300px;
+
+  max-height: 100vh;
+  z-index: 999;
+  font-size: 38px;
 }
 
 .hamburger-icon span{
   width: 70px;
+  z-index: 999;
 }
 
 
 
 .hamburger-icon.open span:first-child{
   transform: rotate(45deg) translate(8px, 5px);
-  
+  z-index: 999;
 }
 .hamburger-icon.open span:nth-child(2) {
   transform: rotate(-45deg) translate(8px, -5px);
-  
+  z-index: 999;
 }
 
 .hamburger-icon span:first-child {
   transform: none;
-  
+  z-index: 999;
 }
 
 .hamburger-icon span:last-child {
   transform: none;
- 
+  z-index: 999;
 }
 
 
@@ -311,6 +331,7 @@ body{
 
 .detailBox h1{
   position: relative;
+  hyphens: auto;
 }
 
 .openingHours  {
@@ -320,7 +341,8 @@ body{
 }
 
 .openingHours:hover{
-  color: #C6E5CD;
+  /* color: #C6E5CD; */
+  text-decoration: none;
   
 }
 
@@ -354,9 +376,6 @@ margin:30px 0 0 9.3vw;
   
 }
 
-.mainContactContainer :nth-child(1):hover {
-  color: #C6E5CD;
-}
 
 
 .mainContactContainer :nth-child(2){
@@ -387,13 +406,21 @@ margin: 22px 30px;
   
 }
 
+.mainConsult :nth-child(1):hover{
+  text-decoration: underline;
+  
+}
+
 .mainConsult :nth-child(3){
  color: inherit;
 }
 
 
+
+
 .mainConsult :nth-child(3):hover{
-  color: #C6E5CD;
+  /* color: #C6E5CD; */
+  text-decoration: none ;
 }
 
 .post{
@@ -418,6 +445,7 @@ align-items: center;
 .post a:hover{
   /* color: #C6E5CD; */
   text-decoration: none;
+  
 }
 
 .welcomePhoto{
@@ -483,7 +511,7 @@ align-items: center;
 }
 
 #backToTopBtn:hover{
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
 
@@ -510,7 +538,12 @@ align-items: center;
 
 .doctorsOffice p a{
   color: inherit;
-  text-decoration: inherit;
+  font-weight: normal;
+}
+
+.doctorsOffice p a:hover{
+  text-decoration: none;
+  
 }
 
 .officeHeading{
@@ -541,7 +574,7 @@ align-items: center;
 }
 
 .officeHeading div:hover{
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
   cursor: pointer;
   z-index: 500;
 }
@@ -575,7 +608,11 @@ align-items: center;
 .officeNav a{
   margin-right: 3.5vw;
   color: inherit;
-  text-decoration: inherit;
+  
+}
+
+.officeNav a:hover{
+  text-decoration: none;
 }
 
 
@@ -927,7 +964,7 @@ tr {
 }
 
 .adviceRollbox:hover{
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
 
@@ -988,6 +1025,7 @@ padding-bottom: 20px;
   background-size: contain;
   z-index: -1;
   opacity: 1;
+  overflow: hidden;
 }
 
 
@@ -1040,10 +1078,18 @@ padding-bottom: 20px;
   
 }
 
+.contactContainerTelInside  a:hover{
+  text-decoration: underline;
+}
+
 
 
 .contacUnList{
   list-style-type: none;
+}
+
+.contacUnList a:hover{
+  text-decoration: none;
 }
 
 .contactContainerEmail{
@@ -1067,6 +1113,9 @@ padding-bottom: 20px;
 
 }
 
+.contactContainerEmail > a:hover{
+  text-decoration: underline;
+}
 
 
 .emailList p{
@@ -1131,6 +1180,10 @@ address {
   font-size: 30px;
 }
 
+address a:hover{
+  text-decoration: none;
+}
+
 .auticko {
   height: auto;
   width: 9vw;
@@ -1162,7 +1215,7 @@ address {
   
   width: auto; 
   max-height: 394px;
-  
+  overflow: hidden;
 }
 
 
@@ -1220,6 +1273,7 @@ footer{
   text-align: left;
   width: 414px;
   max-height: 70px;
+  hyphens: auto;
   /* white-space: pre-wrap; */
   /* overflow: hidden; */
   /* word-wrap: break-word; */
