--- a/css/style.css
+++ b/css/style.css
@@ -1124,7 +1124,7 @@ padding-bottom: 20px;
 }
 
 #phoneIconEndOfaPage{
-  margin: 32px 29px 0  136px ;
+  margin: 0px 29px 0  136px ;
   height: 115px;
   width: auto;
 }
@@ -1180,6 +1180,7 @@ padding-bottom: 20px;
   position: relative;
   margin-bottom: 17px;
   flex-direction: row;
+  margin-top: 32px;
 }
 
 
@@ -1217,8 +1218,9 @@ padding-bottom: 20px;
 
 .contactContainerEmail{
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   margin-bottom: 25px;
+  margin-top: 100px;
 }
 
 
@@ -1226,6 +1228,7 @@ padding-bottom: 20px;
   height:  auto ;
   width: 121px;
   margin-left: 135px;
+  
 }
 
 .contactContainerEmail > a{
@@ -1233,7 +1236,7 @@ padding-bottom: 20px;
   margin-left: 30px;
   color: inherit;
   text-decoration: inherit;
-
+  margin-top: ;
 }
 
 
@@ -1244,12 +1247,15 @@ padding-bottom: 20px;
 
 
 .emailList p{
-  margin: 0 0 25px 150px;
+  margin: 0 150px 25px 150px ;
   font-size: 22px;
+  max-width: 700px;
+  
 }
 
 .emailList ul{
   list-style-position: inside;
+  margin-bottom: 0px;
 }
 
 
@@ -1277,9 +1283,10 @@ padding-bottom: 20px;
 
 .contactContainerAddressInside div{
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
-
+  margin-bottom: 27px;
+  margin-top: 75px;
 }
 
 
@@ -1287,8 +1294,8 @@ padding-bottom: 20px;
   height: auto;
   width: 131;
   margin-right: 29px;
-  margin-bottom: 27px;
-  margin-left: 9.4vw;
+  
+  margin-left: 135px;
 }
 
 .contactContainerAddressInside h5{
@@ -1312,8 +1319,9 @@ address a:hover{
 
 .auticko {
   height: auto;
-  width: 9vw;
+  width: 181px;
   position: absolute;
+  left: 1100px;
 }
 
 
