--- a/css/responsive.css
+++ b/css/responsive.css
@@ -27,6 +27,10 @@
         margin-left: 390px;
     }
 
+    .buildingDescription{
+        margin-left: 390px;
+    }
+
 
 
     #ordinancePhoto :nth-of-type(1){
@@ -118,8 +122,12 @@
 
      /* adviceAndTips section 1250- */
 
+     .adviceAndTipsInside > h2{
+        margin-left: 70px;
+     }
+
      .adviceAndTipsInside > h3{
-        margin: 30px 0 15px 20px;
+        margin: 30px 0 15px 70px;
      }
 
      .adviceContainer h3{
@@ -127,11 +135,11 @@
      }
 
      .adviceRollbox{
-        margin-left: 20px;
+        margin-left: 70px;
      }
 
      .adviceToggleContent{
-        margin: 0 25px 0 20px ;
+        margin: 0 25px 0 70px ;
      }
 
 
@@ -199,10 +207,13 @@
     }
 
     .auticko{
-        width: 110px;
-        height: 77px;
+        
         z-index: -1;
-        left: 264px;
+        left: 600px;
+      }
+
+      .buildingDescription{
+        font-size: 17px;
       }
 
     #ordinancePhoto :nth-of-type(1){
@@ -507,7 +518,7 @@
     /*advice and tips section 780- */
 
     .adviceAndTips{
-        padding: 0 0 40px 0;
+        padding: 40px 0 40px 0;
         
     }
 
@@ -553,12 +564,23 @@
       }
 
       #phoneIconEndOfaPage{
-        margin-left: 0 !important;
+        margin-left: 8px !important;
+        width: 86px;
+        height: auto;
+        margin-top: 15px;
+
       }
+
+      .contactContainerTel a{
+        margin-top: 15px;
+      }
+
+      
 
       .contactContainerTel  ul{
         font-size: 17px;
        margin-left: 0 ;
+       margin-top: 15px;
       }
 
       .contactContainerTel h2 {
@@ -571,23 +593,19 @@
         margin: 0 0 0 0;
       }
 
-      .contactContainerTelInside  img{
-        right: 8px;
-        width: 86px;
-        height: 83px;
-        position: static;
-        margin-left: 5px;
-      }
+      
 
       .contactContainerTelInside  a{
         font-size: 25px;
         margin-left: 0px;
       }
 
-      .contactContainerEmail .postIcon{
-        width: 85px;
-        height: 80px;
-        
+      .postIconContact{
+        width: 85px !important;
+        height: auto;
+        margin-left: 12px !important;
+        margin-bottom: 0px !important;
+        margin-top: 30px !important;
       }
 
       .contacUnList {
@@ -597,25 +615,52 @@
       .contactContainerEmail{
         flex-direction: column;
         align-items: flex-start;
+        margin-top: 0px ;
+      }
+
+      .emailList p{
+        margin-left: 0px;
+        font-size: 17px;
       }
       
       .contactContainerEmail a{
         font-size: 25px;
+        margin-left: 0px;
       }
+
+      
+
+      
 
       .contactContainerAddressInside div{
         flex-direction: column;
+        
       }
 
       .spendlik{
         
         width: 85px;
         height: 80px;
-        margin: 0 0 18px 65px;
+        margin: 0 0 18px 12px;
         
     }
 
-      
+    .contactContainerAddressInside div h5{
+        margin-left: 0px;
+        font-size: 25px;
+
+    }
+
+    .contactContainerAddressInside div address{
+        margin-left: 0px;
+        font-size: 17px;
+    }
+
+    .auticko{
+        width: 110px;
+        height: auto;
+        left: 400px;
+    }
 
       
 
