--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,12 @@ body{
     overflow-x: hidden;
     letter-spacing: 0px;
     opacity: 1;
-    
+    position: relative;
+    height: 100%;
+    width: 100%;
+    position: relative;
+    min-height: 100vh;
+    min-width: 100vw;
 }
 
 
@@ -31,7 +36,9 @@ body{
 /* .topBanner{
   display: none;
 } */
-
+header{
+  position: relative;
+}
 
 .notification{
     background: #C6E5CD;
@@ -100,13 +107,13 @@ body{
 .mainPage header::after {
   content: "";
   position: absolute;
-  top: 295px;
+  top: 360px;
   left: 82vw;
-  width: 135%;
-  height: 165%;
+  width: 180px;
+  height: 1450px;
   background: url('../img/Raketa.svg') no-repeat; 
-  background-size: contain;
-  z-index: 2;
+  background-size: cover;
+  z-index: 999;
   opacity: 1;
   overflow-x: hidden;
 }
@@ -457,7 +464,7 @@ align-items: center;
 }
 
 #backToTopBtn {
-  display: none; /* Tlačítko bude na začátku skryté */
+  display: none; 
   position: fixed;
   bottom: 20px;
   right: 30px;
@@ -551,7 +558,7 @@ align-items: center;
   margin-bottom: 75px;
   flex-basis: auto;
   overflow: hidden;
-  margin: 0 0 0 10.4vw;
+  margin: 0 0 0 150px;
 }
 
 .officeHeading{
@@ -708,6 +715,7 @@ align-items: center;
 .staffIrenaPodlahova div{
   margin: 60px 0 0 500px;
   max-width: 700px;
+  min-height: 220px;
 }
 
 .staffIrenaPodlahova h3{
@@ -721,7 +729,7 @@ align-items: center;
   font-size: 22px;
   font-weight: normal;
   max-width: 700px;
-  margin-bottom: 150px;
+  margin-bottom: 0px;
   margin-right: 110px;
   overflow-wrap: normal;
   
@@ -769,7 +777,7 @@ align-items: center;
 .rewievFromPatients h2{
   font-size: 45px;
   margin-bottom: 40px;
-  margin-left: 10.4vw;
+  margin-left: 150px;
 }
 
 .patientRewiev{
@@ -777,7 +785,7 @@ align-items: center;
   display: flex;
   flex-direction: row;
   padding: 60px 4.8vw 60px 3.4vw;
-  margin-left: 10.4vw;
+  margin-left:150px;
   width: 73vw;
   border-radius: 22px ;
   
@@ -810,7 +818,7 @@ width: 16.9vw;
 }
 
 .otherRewievs{
-  margin-left: 19vw;
+  margin-left: 274px;
 }
 
 .otherRewievs h3{
@@ -849,20 +857,20 @@ width: 16.9vw;
 
 .officeHours h2{
   font-size: 65px;
-  margin-left: 10.4vw;
+  margin-left: 150px;
 }
 
 .officeHours h5{
   margin-top: 75px;
   font-size: 30px;
-  margin-left: 10.4vw;
+  margin-left: 150px;
 }
 
 .officeHours p{
   margin-top: 30px;
   font-size: 22px;
   width: 700px;
-  margin-left: 10.4vw;
+  margin-left: 150px;
 }
 
 
@@ -875,7 +883,7 @@ width: 16.9vw;
   border-radius: 22px;
   overflow: hidden;
   border-collapse: collapse;
-  margin-left: 10.4vw;
+  margin-left: 150px;
 }
 
 .odd td,th{
@@ -935,7 +943,7 @@ tr {
 
 .adviceAndTipsInside > h3{
   font-size: 45px ;
-  margin: 60px 0 30px 70px;
+  margin: 60px 0 30px 150px;
   font-family: 'Larsseit';
 }
 
@@ -968,7 +976,7 @@ tr {
   width: 800px;
   margin-bottom: 10px;
   border-radius: 22px;
-  margin-left: 70px;
+  margin-left: 150px;
 
 }
 
